--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/cisarLZamora/Chess-Board/issues"
   },
-  "homepage": "https://github.com/cisarLZamora/Chess-Board#readme"
+  "homepage": "https://github.com/cisarLZamora/Chess-Board#readme",
+  "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0"
+  }
 }
